--- a/FacilityMonitoringFirmware/FacilityMonitoringFirmware.vcxproj.filters
+++ b/FacilityMonitoringFirmware/FacilityMonitoringFirmware.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClInclude Include="__vm\.FacilityMonitoringFirmware.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MonitorController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="MonitorController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
