--- a/FacilityMonitoringFirmware/FacilityMonitoringFirmware.vcxproj
+++ b/FacilityMonitoringFirmware/FacilityMonitoringFirmware.vcxproj
@@ -119,6 +119,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Helpers.h" />
     <ClInclude Include="MonitorController.h" />
     <ClInclude Include="__vm\.FacilityMonitoringFirmware.vsarduino.h" />
   </ItemGroup>
